// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component Exercise name exist should match the snapshot 1`] = `
<header
  data-css-1qqtemn=""
>
  <div
    className="left-side"
    data-css-1ulbvcw=""
  >
    <Icon
      color="red"
      data-css-1bdqo0b=""
      height={16}
      iconName="menu"
      viewBox="0 0 32 32"
      width={16}
    />
    <div>
      <div
        data-css-1ixk24o=""
        data-test="date"
      >
        Saturday, Jul 15th
      </div>
      <div
        data-css-1qe4ilz=""
        data-test="currently"
      >
        Pull Up
      </div>
    </div>
  </div>
  <div>
    <RenderNothing />
  </div>
</header>
`;

exports[`Header component Shallow snapshot matches the previous 1`] = `
<header
  data-css-1qqtemn=""
>
  <div
    className="left-side"
    data-css-1ulbvcw=""
  >
    <Icon
      color="red"
      data-css-1bdqo0b=""
      height={16}
      iconName="menu"
      viewBox="0 0 32 32"
      width={16}
    />
    <div>
      <div
        data-css-1ixk24o=""
        data-test="date"
      >
        Saturday, Jul 15th
      </div>
      <div
        data-css-1qe4ilz=""
        data-test="currently"
      >
        Start Workout
      </div>
    </div>
  </div>
  <div>
    <RenderNothing />
  </div>
</header>
`;
